--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,11 +21,18 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate GitHub App Token
+        id: generate-token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Checkout Plugin Repository
         uses: actions/checkout@v3
         with:
           repository: "${{ inputs.plugin-repository }}"
-          token: "${{ secrets.DEPLOY_GITHUB_TOKEN }}"
+          token: "${{ steps.generate-token.outputs.token }}"
 
       - name: Download Artifact (release)
         uses: actions/download-artifact@v3
@@ -38,7 +45,7 @@ jobs:
           curl \
             -o dist/testing/${{ inputs.plugin-name }}/commits.json \
             -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ secrets.DEPLOY_GITHUB_TOKEN }}" \
+            -H "Authorization: token ${{ steps.generate-token.outputs.token }}" \
             https://api.github.com/repos/${{ github.repository }}/commits
       - name: Prepare event.json
         run: echo '${{ toJSON(github.event) }}' > dist/testing/${{ inputs.plugin-name }}/event.json
