--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,9 +10,11 @@ on:
         required: false
         type: string
         default: "codedynamis/PluginRepository"
-    # secrets:
-    #   DEPLOY_GITHUB_TOKEN:
-    #     required: true
+    secrets:
+      APP_ID:
+        required: true
+      APP_PRIVATE_KEY:
+        required: true
 
 permissions:
   actions: read
