--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,19 +1,19 @@
 name: Update PluginMaster
 
-on: 
+on:
   push:
     paths-ignore:
-      - '**.md'
-      - '**/pluginmaster.json'
-      - '.github/workflows/*.yaml'
-
+      - "**.md"
+      - "**/pluginmaster.json"
+      - ".github/workflows/*.yaml"
     branches:
       - master
-
   schedule:
-    - cron:  '0 * * * *'
-
+    - cron: "0 * * * *"
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   update:
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Update PluginMaster
         run: python update.py
