--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,7 +54,9 @@ jobs:
 
       - name: Copy Artifact (stable)
         # if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
-        run: cp -rf dist/testing/${{ inputs.plugin-name }} dist/stable/${{ inputs.plugin-name }}
+        run: |
+          mkdir -p dist/stable/${{ inputs.plugin-name }}
+          cp -rf dist/testing/${{ inputs.plugin-name }} dist/stable/${{ inputs.plugin-name }}
 
       - name: Push to Plugin Repository
         uses: stefanzweifel/git-auto-commit-action@v4
