--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,7 +56,7 @@ jobs:
         # if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
         run: |
           mkdir -p dist/stable/${{ inputs.plugin-name }}
-          cp -rf dist/testing/${{ inputs.plugin-name }} dist/stable/${{ inputs.plugin-name }}
+          cp -rf dist/testing/${{ inputs.plugin-name }} dist/stable/
 
       - name: Push to Plugin Repository
         uses: stefanzweifel/git-auto-commit-action@v4
